# mcp-internet-speed-test

./: .gitignore  Dockerfile  README.md  glama.json  main.py  pyproject.toml  smithery.yaml
mcp_internet_speed_test/: __init__.py  main.py
test_files/: README.md
